Add team members to Service Desk Team Page

--- a/development/ops/monitor/service-desk/index.html.md.erb
+++ b/development/ops/monitor/service-desk/index.html.md.erb
@@ -13,16 +13,13 @@ description: "The Service Desk Group a part of the Monitor Stage of the DevOps l
 ## Service Desk
 The **Service Desk** group at GitLab is responsible for building tools that enable support teams to help internal and external customers.
 
-## Exciting things and accomplishments
+## Exciting things and accomplishments 
 This section details the happenings within the Service Desk group. At any given time this section will have the top exciting things and/or accomplishments of the team.
-1.
-1.
-1.
+
 
 ## Peformance Indicators
 
 ### PI Dashboards
-
 - [Monitor:Respond error budget dashboard](https://dashboards.gitlab.net/d/stage-groups-respond/stage-groups-group-dashboard-monitor-respond?orgId=1): The Respond Group has work in progress to separate our dashboard into two, active and inactive projects.  This will allow the team to identify trends in our newly released features separately from inactive projects.  We're looking for different trends in active vs inactive projects.  Active projects are constantly changing and the chances of introducing problems that impact our Error Budget are more likely.  With inactive projects, we're looking for impact from changes in dependencies which may adversely affect the Error Budget.  The team will review both of the dashboards monthly as part of our async retrospective process and track the needed improvements as technical debt issues.
 
 
@@ -35,9 +32,9 @@ Service Ping is used for self-managed customers.  The table below was generated 
 
 ## Communication
 
-- Slack channel: [#f_service-desk](https://gitlab.slack.com/archives/C440Z22MC)
+- Slack channel: [#g_service-desk](https://gitlab.slack.com/archives/C04LNKW9NUD)
 - Slack alias: [TBD]()
-- The Service Desk group team meetings are scheduled on our [Service Desk team calendar]()
+- The Service Desk group team meetings are scheduled weekly at 16:30 UTC.
   - The team holds a weekly sync meeting (TBD) and [meetings are recorded]().
     - 1st week of the month - At the start of the quarter review the [roadmap]() and [product direction]().
     - 2nd week of the month - Walk through in-progress work on the [workflow dashboard]().
@@ -45,12 +42,21 @@ Service Ping is used for self-managed customers.  The table below was generated 
     - 4th week of the month - Demo new features and showcase any interesting work done within or outside of our team (in-person or recorded demos).
 
 ## Team members
-
-<%= direct_team(manager_role: 'Fullstack Engineering Manager, Monitor:Respond') %>
+| Name                 | Role                                          |
+|----------------------|-----------------------------------------------|
+| Oleh Maniavskyi      |  Senior Backend Software Engineer - Team Lead |
+| Emma Konstantynovska | Senior Backend Software Engineer              |
+| Hanna Troian         | Backend Software Engineer                     |
+| Mykhailo Maidanskyi  | Backend Software Engineer                     |
+| Oksana Kyrylchuk     | Senior Frontend Software Engineer             |
+| Yurii Faievskyi      | Frontend Software Engineer                    |
 
 ## Stable counterparts
+| Name                 | Role                                          |
+|----------------------|-----------------------------------------------|
+| Alana Bellucci     |  Senior Product Manager |
+| Kevin Chu | Group Product Manager             |
 
-<%= stable_counterparts(role_regexp: /(?<!:)Monitor(?!:Observability)/, direct_manager_role: 'Fullstack Engineering Manager, Monitor:Respond') %>
 
 ## Responsibilities
 {: #monitoring}
