--- a/quality/engineering-productivity/index.html.md.erb
+++ b/quality/engineering-productivity/index.html.md.erb
@@ -38,11 +38,11 @@ The Engineering Productivity team increases productivity of GitLab team members 
 
 ### Mission
 
-[Reduce pipeline cost](/handbook/engineering/quality/performance-indicators/#gitlab-project-average-pipeline-cost-per-merge-request), [reduce pipeline duration](/handbook/engineering/quality/performance-indicators/#gitlab-project-average-successful-merge-request-pipeline-duration), and [increase pipeline stability](/handbook/engineering/quality/performance-indicators/#gitlab-project-master-pipeline-success-rate) for GitLab projects focusing on projects with the largest reach, leveraging GitLab features where possible.
+[Increase pipeline stability](/handbook/engineering/quality/performance-indicators/#master-pipeline-stability), [shorten the feedback loop](/handbook/engineering/quality/performance-indicators/#time-to-first-failure), reduce pipeline cost, and [reduce pipeline duration](/handbook/engineering/quality/performance-indicators/#merge-request-pipeline-duration) for GitLab projects focusing on projects with the largest reach, leveraging GitLab features where possible.
 
 Improve engineering workflow automation to decrease [Open MR Review Time (OMRT)](/handbook/engineering/development/performance-indicators/#open-mr-review-time-omrt) and [Open MR Age (OMA)](/handbook/engineering/development/performance-indicators/#open-mr-age-oma), and decrease [open ~"type::bug" age](/handbook/engineering/quality/performance-indicators/#s1-oba).
 
-Enable frequent and positive experience of Community Contributions from the Wider GitLab Community.
+Collaborate with the [Contributor Success team](/handbook/engineering/quality/contributor-success/) to enable frequent and positive experience of contributions from the Wider GitLab Community.
 
 ### Workstream objectives
 
@@ -53,7 +53,6 @@ The Engineering Productivity team focuses on the following workstreams and the a
 | ~"ep::pipeline" | [GitLab Project Pipeline Improvement](https://gitlab.com/groups/gitlab-org/-/epics/1853) |
 | ~"ep::review-apps" | [Improve Review Apps reliability & efficiency](https://gitlab.com/groups/gitlab-org/-/epics/605) |
 | ~"ep::triage" | [Quality: Triage](https://gitlab.com/groups/gitlab-org/-/epics/1461) |
-| ~"ep::metrics" | [Centralized handbook first metrics dashboard](https://gitlab.com/groups/gitlab-org/-/epics/3580) |
 | ~"ep::workflow" | [Reviewer Roulette Improvements](https://gitlab.com/groups/gitlab-org/-/epics/3287) |
 
 ## Areas of Responsibility
