--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -255,8 +255,13 @@ The content of these updates varies by individual and role:
 1. Transparency - Sharing information in a consistent, accessible way increases transparency and reduces the threshold for team members to contribute.
 
 
-## Escalations from Support Team 
+## Escalations from Support Team
 
 We are piloting a process to make coordinating with the Support team on customer escalations more efficient.
 
 See [How to Use GitLab.com to Formally Request Help from the GitLab Ops Development Team](https://about.gitlab.com/handbook/support/workflows/how-to-get-help.html#how-to-use-gitlabcom-to-formally-request-help-from-the-gitlab-ops-development-team) for process details.
+
+If you encounter an Ops-related customer escalation, that seems to have a high
+[customer priority](/handbook/product/product-processes/customer-issues-prioritization-framework/#priority-points),
+and would benefit from additional visibility, please post a link with a short description in
+[`#doe-ops` Slack channel](https://gitlab.slack.com/archives/CT9CM1VDJ).
