--- a/development/sec/secure/composition-analysis/index.html.md.erb
+++ b/development/sec/secure/composition-analysis/index.html.md.erb
@@ -104,6 +104,7 @@ If a support engineer requests assistance via slack and it requires investigatio
     - [#s_secure](https://gitlab.slack.com/archives/C8S0HHM44)
     - [#sec-section](https://gitlab.slack.com/archives/C02087FTL5V)
     - [#s_secure-alerts](https://gitlab.slack.com/archives/CAU9SFKNU)
+    - [#f_container_scanning](https://gitlab.slack.com/archives/C041F2XJACB)
 1. Monitor [Section Sec Request For Help](https://gitlab.com/gitlab-com/sec-sub-department/section-sec-request-for-help/-/issues/?label_name=Help%20group%3A%3Acomposition%20analysis) project for support requests. 
 1. Triage bugs and resolve them when given `~priority::1`. (See [Bugs triaging process](#bugs-triaging-process))
 1. Triage infradev issues and resolve them when given `~priority::1`. (See [Infradev triaging process](#infradev-triaging-process))
