Canonical points to 404

--- a/ceo/chief-of-staff-team/readmes/lfarrer/index.html.md.erb
+++ b/ceo/chief-of-staff-team/readmes/lfarrer/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: markdown_page
 title: "Laurel Farrer's README"
-canonical_path: "/handbook/marketing/readmes/lfarrer/"
+description: "I’m Laurel Farrer, an Organizational Development geek and a Principal of Strategy and Operations in the Workplace team here at GitLab."
 twitter_image: "/images/opengraph/all-remote.jpg"
 twitter_image_alt: "GitLab remote team graphic"
 twitter_site: "@gitlab"
