Initial PM US Public Sector job description

--- a/job-families/product/product-manager/index.html.md.erb
+++ b/job-families/product/product-manager/index.html.md.erb
@@ -474,6 +474,16 @@ We're looking for a PM to build the [GitLab Dedicated](https://docs.gitlab.com/e
 - Demonstrated ability to work in a cross-functional team
 - Experience with the fullfilment lifecycle is a plus
 
+### US Public Sector
+
+We're looking for a PM to build the GitLab services for the US Public Sector. As the PM for the US Public Sector Services group, you'll work directly with US Public Sector entities, external assessors and internal stakeholders to define product requirements and ensure successful implementation of GitLab services.
+
+#### Requirements
+- Experience with compliance programs, such as FedRAMP, SOC2, or ISO
+- Excellent communication skills and the ability to translate complex requirements into actionable iterations
+- Confident working with stakeholders across the company to push compliance programs forward
+- Demonstrated ability to work in a cross-functional team
+
 ### Pods
 
 We're looking for a PM to define GitLab's long-term scalability strategy both for our GitLab.com SaaS platform and self-managed customers. This role is critical to define key customer requirements, for example increased service availability or support for multiple regions and then work with some of the best and most senior engineers at GitLab to execute on that strategy, for example by possibly implementing a [Pod-like architecture](https://gitlab.com/groups/gitlab-org/-/epics/7582).
