--- a/development/ops/monitor/observability/index.html.md.erb
+++ b/development/ops/monitor/observability/index.html.md.erb
@@ -66,6 +66,14 @@ We want to build an observability product, a tool that's a fit for the modern de
 
 We have Geekbot standups on Weds and retrospectives on Fridays. We use these async standups to communicate what we have accomplished, any current blockers and what we plan to work on next.
 
+## Async Updates
+
+Every Friday, the EM provides an async update of the team's progress, following the [Ops sub-department async updates](https://about.gitlab.com/handbook/engineering/development/ops/#async-updates-no-status-in-meetings) process.
+
+These updates are published as [issues in the `general` project](https://gitlab.com/gitlab-org/opstrace/general/-/issues/?sort=created_date&state=all&label_name%5B%5D=OpsSection%3A%3AWeekly-Update&first_page_size=100).
+
+Updates and highlights from all teams in Ops are collected automatically [here](https://gitlab.com/gitlab-com/ops-sub-department/ops-status-updates/-/issues/?sort=created_date&state=opened&first_page_size=20), grouped by week / month / quarter.
+
 ### Meetings
 
 - Weekly Meetings: These are focused on organizing ongoing work or specific efforts such as rollout-outs or bigger initiatives.
